--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -20,7 +20,7 @@
     "server": "json-server -p3001 --watch db.json"
   },
   
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3001/",
 
   "eslintConfig": {
     "extends": [
