--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -46,7 +46,8 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^26.0.0",
     "jest-watch-typeahead": "^0.6.5",
-    "json-server": "^0.17.0"
+    "json-server": "^0.17.0",
+    "prettier": "2.6.2"
   },
   "resolutions": {
     "mini-css-extract-plugin": "2.4.5"
